# pyTrainingLoad

./: LICENSE  README.md  pyproject.toml
docs/: index.html  search.js
docs/pyTrainingLoad/: trainingload.html
pyTrainingLoad/: __init__.py  trainingload.py
